Make sure coalesced bit is set on latency_info passed back to the browser.

It appears that coalesced events were getting the same latency info
being set on the objects passed back. The latency info really should
have the coalesced bit set on the returned latency info object.

BUG=771193

Change-Id: I5779d26a14396f76d18147efd3e9f2bd1e4ec0cb
Reviewed-on: https://chromium-review.googlesource.com/698125
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506146}