content/renderer/input/main_thread_event_queue_unittest.cc
@@ -93,9 +93,26 @@ class HandledClosure : public HandledTask {
 };
 
 enum class CallbackReceivedState {
-  kNotReceived,
+  kPending,
   kCalledWhileHandlingEvent,
   kCalledAfterHandleEvent,
+};
+
+class ReceivedCallback {
+ public:
+  ReceivedCallback()
+      : ReceivedCallback(CallbackReceivedState::kPending, false) {}
+
+  ReceivedCallback(CallbackReceivedState state, bool coalesced_latency)
+      : state_(state), coalesced_latency_(coalesced_latency) {}
+  bool operator==(const ReceivedCallback& other) const {
+    return state_ == other.state_ &&
+           coalesced_latency_ == other.coalesced_latency_;
+  }
+
+ private:
+  CallbackReceivedState state_;
+  bool coalesced_latency_;
 };
 
 class HandledEventCallbackTracker {
@@ -106,7 +123,7 @@ class HandledEventCallbackTracker {
   }
 
   HandledEventCallback GetCallback() {
-    callbacks_received_.push_back(CallbackReceivedState::kNotReceived);
+    callbacks_received_.push_back(ReceivedCallback());
     HandledEventCallback callback =
         base::BindOnce(&HandledEventCallbackTracker::DidHandleEvent, weak_this_,
                        callbacks_received_.size() - 1);
@@ -118,19 +135,21 @@ class HandledEventCallbackTracker {
                       const ui::LatencyInfo& latency,
                       std::unique_ptr<ui::DidOverscrollParams> params,
                       base::Optional<cc::TouchAction> touch_action) {
-    callbacks_received_[index] =
+    callbacks_received_[index] = ReceivedCallback(
         handling_event_ ? CallbackReceivedState::kCalledWhileHandlingEvent
-                        : CallbackReceivedState::kCalledAfterHandleEvent;
+                        : CallbackReceivedState::kCalledAfterHandleEvent,
+        latency.coalesced());
   }
 
-  const std::vector<CallbackReceivedState>& GetReceivedCallbacks() const {
+  const std::vector<ReceivedCallback>& GetReceivedCallbacks() const {
     return callbacks_received_;
   }
 
   bool handling_event_;
 
  private:
-  std::vector<CallbackReceivedState> callbacks_received_;
+  std::vector<ReceivedCallback> callbacks_received_;
+  std::vector<ui::LatencyInfo> latency_info_received_;
   base::WeakPtr<HandledEventCallbackTracker> weak_this_;
   base::WeakPtrFactory<HandledEventCallbackTracker> weak_ptr_factory_;
 };
@@ -227,7 +246,7 @@ class MainThreadEventQueueTest : public testing::TestWithParam<unsigned>,
 
   void SetNeedsMainFrame() override { needs_main_frame_ = true; }
 
-  std::vector<CallbackReceivedState> GetAndResetCallbackResults() {
+  std::vector<ReceivedCallback> GetAndResetCallbackResults() {
     std::unique_ptr<HandledEventCallbackTracker> callback =
         base::MakeUnique<HandledEventCallbackTracker>();
     handler_callback_.swap(callback);
@@ -273,7 +292,8 @@ TEST_P(MainThreadEventQueueTest, NonBlockingWheel) {
             main_task_runner_->HasPendingTask());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(2u, handled_tasks_.size());
@@ -372,7 +392,8 @@ TEST_P(MainThreadEventQueueTest, NonBlockingTouch) {
   EXPECT_TRUE(main_task_runner_->HasPendingTask());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(3u, handled_tasks_.size());
@@ -475,10 +496,15 @@ TEST_P(MainThreadEventQueueTest, BlockingTouch) {
 
     EXPECT_THAT(
         GetAndResetCallbackResults(),
-        testing::ElementsAre(CallbackReceivedState::kCalledWhileHandlingEvent,
-                             CallbackReceivedState::kCalledAfterHandleEvent,
-                             CallbackReceivedState::kCalledAfterHandleEvent,
-                             CallbackReceivedState::kCalledAfterHandleEvent));
+        testing::ElementsAre(
+            ReceivedCallback(CallbackReceivedState::kCalledWhileHandlingEvent,
+                             false),
+            ReceivedCallback(CallbackReceivedState::kCalledAfterHandleEvent,
+                             false),
+            ReceivedCallback(CallbackReceivedState::kCalledAfterHandleEvent,
+                             true),
+            ReceivedCallback(CallbackReceivedState::kCalledAfterHandleEvent,
+                             true)));
     EXPECT_EQ(0u, event_queue().size());
 
     const WebTouchEvent* last_touch_event = static_cast<const WebTouchEvent*>(
@@ -493,7 +519,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouch) {
   EXPECT_EQ(1u, event_queue().size());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   histogram_tester.ExpectUniqueSample(kCoalescedCountHistogram, 2, 2);
 }
 
@@ -526,7 +553,8 @@ TEST_P(MainThreadEventQueueTest, InterleavedEvents) {
             main_task_runner_->HasPendingTask());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(2u, handled_tasks_.size());
@@ -605,7 +633,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedMouseInput) {
   EXPECT_EQ(0u, event_queue().size());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 
   // Simulate the rAF running before the PostTask occurs. The rAF
   // will consume everything.
@@ -618,7 +647,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedMouseInput) {
   EXPECT_EQ(0u, event_queue().size());
   main_task_runner_->RunUntilIdle();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 
   // Simulate event consumption but no rAF signal. The mouse wheel events
   // should still be in the queue.
@@ -635,7 +665,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedMouseInput) {
   EXPECT_EQ(2u, event_queue().size());
   RunSimulatedRafOnce();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_EQ(wheelEvents[2].GetModifiers(),
             handled_tasks_.at(3)->taskAsEvent()->Event().GetModifiers());
   EXPECT_EQ(wheelEvents[0].GetModifiers(),
@@ -675,7 +706,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInput) {
   EXPECT_EQ(0u, event_queue().size());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 
   // Simulate the rAF running before the PostTask occurs. The rAF
   // will consume everything.
@@ -688,7 +720,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInput) {
   EXPECT_EQ(0u, event_queue().size());
   main_task_runner_->RunUntilIdle();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 
   // Simulate event consumption but no rAF signal. The touch events
   // should still be in the queue.
@@ -702,7 +735,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInput) {
   EXPECT_EQ(1u, event_queue().size());
   RunSimulatedRafOnce();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 
   // Simulate the touch move being discrete
   kEvents[0].touch_start_or_first_touch_move = true;
@@ -716,7 +750,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInput) {
   EXPECT_TRUE(needs_main_frame_);
   main_task_runner_->RunUntilIdle();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
 }
 
 TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputCoalescedMoves) {
@@ -753,8 +788,11 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputCoalescedMoves) {
     EXPECT_EQ(0u, event_queue().size());
     EXPECT_THAT(
         GetAndResetCallbackResults(),
-        testing::ElementsAre(CallbackReceivedState::kCalledWhileHandlingEvent,
-                             CallbackReceivedState::kCalledAfterHandleEvent));
+        testing::ElementsAre(
+            ReceivedCallback(CallbackReceivedState::kCalledWhileHandlingEvent,
+                             false),
+            ReceivedCallback(CallbackReceivedState::kCalledAfterHandleEvent,
+                             true)));
   }
 
   // Send a non-cancelable ack required event, and then a non-ack
@@ -770,7 +808,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputCoalescedMoves) {
   RunPendingTasksWithSimulatedRaf();
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 
   // Send a non-ack required event, and then a non-cancelable ack
   // required event they should be coalesced together.
@@ -785,7 +824,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputCoalescedMoves) {
   RunPendingTasksWithSimulatedRaf();
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
 }
 
 TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputThrottlingMoves) {
@@ -816,7 +856,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputThrottlingMoves) {
   EXPECT_TRUE(needs_main_frame_);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   HandleEvent(kEvents[0], INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   HandleEvent(kEvents[1], INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   EXPECT_EQ(1u, event_queue().size());
@@ -832,7 +873,8 @@ TEST_P(MainThreadEventQueueTest, RafAlignedTouchInputThrottlingMoves) {
   // And should eventually flush.
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
 }
 
@@ -858,7 +900,8 @@ TEST_P(MainThreadEventQueueTest, LowLatency) {
   EXPECT_FALSE(needs_main_frame_);
   main_task_runner_->RunUntilIdle();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
 
@@ -875,7 +918,8 @@ TEST_P(MainThreadEventQueueTest, LowLatency) {
   EXPECT_FALSE(needs_main_frame_);
   main_task_runner_->RunUntilIdle();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
 
   // Now turn off low latency mode.
@@ -893,7 +937,8 @@ TEST_P(MainThreadEventQueueTest, LowLatency) {
     RunPendingTasksWithSimulatedRaf();
   }
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
 
@@ -911,7 +956,8 @@ TEST_P(MainThreadEventQueueTest, LowLatency) {
     RunPendingTasksWithSimulatedRaf();
   }
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
 }
 
@@ -929,7 +975,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesDuringFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_SET_NON_BLOCKING_DUE_TO_FLING);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(1u, handled_tasks_.size());
@@ -950,7 +997,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesDuringFling) {
             main_task_runner_->HasPendingTask());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledWhileHandlingEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledWhileHandlingEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(2u, handled_tasks_.size());
@@ -969,7 +1017,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesDuringFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_SET_NON_BLOCKING_DUE_TO_FLING);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(3u, handled_tasks_.size());
@@ -986,7 +1035,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesDuringFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_SET_NON_BLOCKING_DUE_TO_FLING);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(4u, handled_tasks_.size());
@@ -1013,7 +1063,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesOutsideFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(1u, handled_tasks_.size());
@@ -1031,7 +1082,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesOutsideFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(2u, handled_tasks_.size());
@@ -1049,7 +1101,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesOutsideFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(3u, handled_tasks_.size());
@@ -1067,7 +1120,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchesOutsideFling) {
   HandleEvent(kEvents, INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_EQ(4u, handled_tasks_.size());
@@ -1202,7 +1256,8 @@ TEST_P(MainThreadEventQueueTest, QueuingClosureWithRafEvent) {
 
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_FALSE(needs_main_frame_);
 
@@ -1236,7 +1291,8 @@ TEST_P(MainThreadEventQueueTest, QueuingClosuresBetweenEvents) {
   main_task_runner_->RunUntilIdle();
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_FALSE(needs_main_frame_);
 
@@ -1273,11 +1329,14 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchMoveBecomesNonBlocking) {
   HandleEvent(scroll_start, INPUT_EVENT_ACK_STATE_NOT_CONSUMED);
   EXPECT_EQ(3u, event_queue().size());
   RunPendingTasksWithSimulatedRaf();
-  EXPECT_THAT(
-      GetAndResetCallbackResults(),
-      testing::ElementsAre(CallbackReceivedState::kCalledAfterHandleEvent,
-                           CallbackReceivedState::kCalledWhileHandlingEvent,
-                           CallbackReceivedState::kCalledAfterHandleEvent));
+  EXPECT_THAT(GetAndResetCallbackResults(),
+              testing::ElementsAre(
+                  ReceivedCallback(
+                      CallbackReceivedState::kCalledAfterHandleEvent, false),
+                  ReceivedCallback(
+                      CallbackReceivedState::kCalledWhileHandlingEvent, false),
+                  ReceivedCallback(
+                      CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_FALSE(needs_main_frame_);
@@ -1316,7 +1375,8 @@ TEST_P(MainThreadEventQueueTest, BlockingTouchMoveWithTouchEnd) {
   EXPECT_EQ(3u, event_queue().size());
   RunPendingTasksWithSimulatedRaf();
   EXPECT_THAT(GetAndResetCallbackResults(),
-              testing::Each(CallbackReceivedState::kCalledAfterHandleEvent));
+              testing::Each(ReceivedCallback(
+                  CallbackReceivedState::kCalledAfterHandleEvent, false)));
   EXPECT_EQ(0u, event_queue().size());
   EXPECT_FALSE(main_task_runner_->HasPendingTask());
   EXPECT_FALSE(needs_main_frame_);
